--- a/backendTravel/.env.example
+++ b/backendTravel/.env.example
@@ -3,12 +3,11 @@ MONGODB_URI=mongodb://127.0.0.1:27017
 JWT_SECRET=your_jwt_secret_here
 JWT_REFRESH_SECRET=your_refresh_secret_here
 NODE_ENV=development
-
-# Email Configuration (Brevo/SMTP)
-SENDER_EMAIL=your_email@example.com
-BREVO_API_KEY=your_brevo_api_key_here
-
-# Cloudinary Configuration
-API_SECRET=your_cloudinary_api_secret_here
-API_KEY=your_cloudinary_api_key_here
-CLOUD_NAME=your_cloudinary_cloud_name_here
+# Go to Brevo Login 
+# click on organization 
+# go to setting 
+# go to api and smtp
+# go to API_KEY
+# create a api key 
+BREVO_API_KEY=your brevo api key
+API_SECRET=your brevo api secret
