--- a/backendTravel/.env.example
+++ b/backendTravel/.env.example
@@ -11,3 +11,13 @@ NODE_ENV=development
 # create a api key 
 BREVO_API_KEY=your brevo api key
 API_SECRET=your brevo api secret
+
+
+
+# Supabase Configuration
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+
+# Google Configuration
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
